--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-
+<div class="clock-face">
+  <img src="images/hand-hour.svg" alt="">
+  <img src="images/hand-minute.svg" alt="">
+  <img src="images/clock-center.svg" alt="">
+</div>
 
 </body>
 </html>
