--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
 <div class="clock-face">
-  <img src="images/hand-hour.svg" alt="">
-  <img src="images/hand-minute.svg" alt="">
-  <img src="images/clock-center.svg" alt="">
+  <img class="hand hand-hour" src="images/hand-hour.svg" alt="">
+  <img class="hand hand-minute" src="images/hand-minute.svg" alt="">
+  <img class="clock-center" src="images/clock-center.svg" alt="">
 </div>
 
 </body>
